--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -55,6 +55,7 @@ body {
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
 }
 
