--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -55,7 +55,7 @@ body {
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  height: 100%;
+  /* height: 100%; */
   -webkit-font-smoothing: antialiased;
 }
 
@@ -128,6 +128,10 @@ footer a {
 
 em {
   font-style: italic;
+}
+
+me {
+  font-style: bold:
 }
 
 strong {
