--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -272,6 +272,33 @@ Full-Width Styles
   margin: 0 auto;
 }
 
+.container {
+    width:400px;
+    display:inline-block;
+    height:80px;
+    margin-right:10px;
+    padding:0;
+}
+
+
+.left {
+    display:table-cell;
+    vertical-align:middle;
+    width:120px;
+    margin:0;
+    padding:0;
+    height:80px;
+    background-image:url(URL);
+    background-size:100%;
+}
+
+.right {
+    display:table-cell;
+    vertical-align:middle;
+    width:280px;
+    padding:0 10px;
+}
+
 #forkme_banner {
   display: block;
   position: absolute;
